--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"gulp server\" \"gulp watch\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
+    "browser-sync": "^2.29.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
@@ -27,9 +28,17 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-inject": "^5.0.5",
     "gulp-sass": "^5.1.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-webserver": "^0.9.1",
+    "jquery-validation": "^1.19.5",
+    "mime": "^3.0.0",
     "node-sass": "^9.0.0",
     "sass": "^1.63.6"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.0"
   }
 }
