--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
     "browser-sync": "^2.29.3",
+    "gh-pages": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-inject": "^5.0.5",
